css/style.scss
/* ... */
	input[type="checkbox"] {
		& + label {
			&:before {
				border-radius: $size-border-radius;
			}
		}
	}

	input[type="radio"] {
		& + label {
			&:before {
				border-radius: 100%;
			}
		}
	}

	::-webkit-input-placeholder {
		color: $color-fg-light !important;
		opacity: 1.0;
	}

	:-moz-placeholder {
		color: $color-fg-light !important;
		opacity: 1.0;
	}

	::-moz-placeholder {
		color: $color-fg-light !important;
		opacity: 1.0;
	}

	:-ms-input-placeholder {
		color: $color-fg-light !important;
		opacity: 1.0;
	}

	.formerize-placeholder {
		color: $color-fg-light !important;
		opacity: 1.0;
	}

/* Box */

	$box-padding: 2em;

	.box {
		background: #fff;
		border-radius: $size-border-radius;
		box-shadow: 0 2px 0 0 $color-border;
		margin: 0 0 $size-element-margin 0;
		padding: $box-padding;
		width: 100%;
		display: inline-block;

		> :last-child {
			margin-bottom: 0;
		}

		div + h4 {
			margin-top: 1.5em;
		}

		&.alt {
			background: none !important;
			border-radius: 0 !important;
			box-shadow: none !important;
			margin: 0 0 $size-element-margin 0;
			padding: 0 !important;
		}

		&.features {
			.features-row {
				border-top: solid 2px $color-border;
				position: relative;

				&:after {
					clear: both;
					content: '';
					display: block;
				}

				section {
					float: left;
					padding: $box-padding;
					width: 50%;

					:last-child {
						margin-bottom: 0;
					}

					&:nth-child(2n) {
						&:before {
							background: $color-border;
							content: '';
							display: block;
							height: 100%;
							margin-left: -3em;
							position: absolute;
							top: 0;
							width: 2px;
						}

						padding-right: 0;
					}

					&:nth-child(2n-1) {
						padding-left: 0;
					}
				}

				&:first-child {
					border-top: 0;

					section {
						padding-top: 0;
					}
				}

				&:last-child {
					padding-bottom: 0;

					section {
						padding-bottom: 0;
					}
				}
			}
		}

		&.special {
			text-align: center;
		}

		.image {
			&.featured {
				border-radius: 0;
				display: block;
				margin: $box-padding 0 $box-padding ($box-padding * -1);
				position: relative;
				width: calc(100% + #{$box-padding * 2});

				img {
					border-radius: 0;
					display: block;
					width: 100%;
				}

				&:first-child {
					border-radius: $size-border-radius $size-border-radius 0 0;
					margin-bottom: $box-padding;
					margin-top: $box-padding * -1;

					img {
						border-radius: $size-border-radius $size-border-radius 0 0;
					}
				}

				&:last-child {
					border-radius: 0 0 $size-border-radius $size-border-radius;
					margin-bottom: $box-padding * -1;
					margin-top: $box-padding;

					img {
						border-radius: 0 0 $size-border-radius $size-border-radius;
					}
				}
			}
		}
	}

/* Icon */

	.icon {
		@include icon;
		border-bottom: none;
		position: relative;

		> .label {
			display: none;
		}

		&.major {
			background: $color-accent1-bg;
			border-radius: 100%;
			color: $color-accent1-fg-bold;
			cursor: default;
			display: inline-block;
			height: 5.5em;
			line-height: 5.5em;
			margin: 0 0 $size-element-margin 0;
			width: 5.5em;

			&:before {
				font-size: 2.5em;
			}

			&.accent1 {
				background: $color-accent1-bg;
				color: $color-accent1-fg-bold;
			}

			&.accent2 {
				background: $color-accent2-bg;
				color: $color-accent2-fg-bold;
			}

			&.accent3 {
				background: $color-accent3-bg;
				color: $color-accent3-fg-bold;
			}

			&.accent4 {
				background: $color-accent4-bg;
				color: $color-accent4-fg-bold;
			}

			&.accent5 {
				background: $color-accent5-bg;
				color: $color-accent5-fg-bold;
			}
		}
	}

/* Image */

	.image {
		border-radius: $size-border-radius;
		border: 0;
		display: inline-block;
		position: relative;

		img {
			border-radius: $size-border-radius;
			display: block;
		}

		&.left {
			float: left;
			padding: 0 1.5em 1em 0;
			top: 0.25em;
		}

		&.right {
			float: right;
			padding: 0 0 1em 1.5em;
			top: 0.25em;
		}

		&.fit {
			display: block;
			margin: 0 0 $size-element-margin 0;
			width: 100%;

			img {
				display: block;
				width: 100%;
			}
		}
	}

/* List */

	ol {
		list-style: decimal;
		margin: 0 0 $size-element-margin 0;
		padding-left: 1.25em;

		li {
			padding-left: 0.25em;
		}
	}
/* ... */

